Linux: Javascript Timing Events stop work on system clock changes at past

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 8u45, 9
    • Component/s: javafx
    • None
    • Environment:

      Linux 64

    • web
    • x86_64
    • linux

        Javascript timing events(setInterval/setTimeout) stop work when system clock set a date in the past.

        To reproduce:
        - Open this page http://www.w3schools.com/js/tryit.asp?filename=tryjs_setinterval2 in a webview
        - Change system date with a date in the past

        At this point timer will stop work as each other timing events

              Assignee:
              Ankit Srivastava
              Reporter:
              Ankit Srivastava
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: