8157559: Javascript Timing Events stop work on system clock changes at past

MonotonicallyIncreasingTime() implementation is changed to use c++11 chrono::steady_clock.

Reviewed-by: arajkumar, kcr